# flumph

./: .devenv.flake.nix  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  anthropic-camera.md  anthropic-server.md  description.md  devenv.nix  main_idea.md
archive/examples/: rav1e_simple_example.rs
examples/: webrtc_stream_from_disk.rs
flumph-mobile/: package.json  pnpm-lock.yaml
flumph-mobile/src/: App.tsx
flumph-mobile/src-tauri/: tauri.conf.json
flumph-mobile/src-tauri/src/: config.rs  control_api.rs  lib.rs  main.rs  signaling.rs  stream_relay.rs  webrtc_client.rs  webrtc_server.rs
flumph-server/: Cargo.toml  old_webrtc_example.rs
flumph-server/src/: connection_manager.rs  control_api.rs  main.rs  signaling.rs  stream_relay.rs  webrtc_server.rs
flumph-server/static/: index.html
tmp/: encryption.md
