[package]
name = "flumph-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "ws"] }
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
webrtc = "0.13.0"
anyhow = "1.0.98"
clap = "4.5.40"
serde_json = "1.0.140"
base64 = "0.22.1"
hyper = "1.6.0"
serde = "1.0.219"
futures = "0.3.31"
bytes = "1.10.1"
maud = "0.27.0"
